--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       </div>
 
       <div class="contact" class="section">
-        <form action="mailto:aaa@gmail.com"method="post" enctype="text/plain" >
+        <form action="mailto:alonalas@gmail.com"method="post" enctype="text/plain" >
           <br>
           <br>
           <br>
